--- a/Resources/Maps/_NF/POI/trademall.yml
+++ b/Resources/Maps/_NF/POI/trademall.yml
@@ -39,10 +39,7 @@ entities:
   - uid: 1
     components:
     - type: MetaData
-      name: Trade Mall
     - type: Transform
-      pos: -0.4503034,-0.57805127
-      parent: invalid
     - type: MapGrid
       chunks:
         0,0:
@@ -39122,7 +39119,7 @@ entities:
     - type: Transform
       pos: 8.5,17.5
       parent: 1
-- proto: WarpPointNFTrade
+- proto: WarpPoint
   entities:
   - uid: 4444
     components:
