Исправление кошачьих проблем из-за хитрых лис (#77)
* Update speech.yml

* Update speech.yml

* Update speech.yml

* Update speech.yml

--- a/Resources/Prototypes/Traits/speech.yml
+++ b/Resources/Prototypes/Traits/speech.yml
@@ -10,6 +10,7 @@
   - type: Accentless
     removes:
     - type: LizardAccent
+    - type: OwOAccent # Corvax-Frontier
     - type: MothAccent
     - type: ReplacementAccent
       accent: dwarf
