Food rework changes (WIP)

--- a/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
@@ -103,6 +103,7 @@
     sprite: Clothing/Eyes/Hud/friedonion.rsi
   - type: ShowHungerIcons
   - type: Food
+    quality: Normal # Frontier
   - type: SolutionContainerManager
     solutions:
       food:
