--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donut.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donut.yml
@@ -46,7 +46,7 @@
   - type: Sprite
     state: plain
   - type: Food # Frontier
-    quality: Junk # Frontier
+    quality: Normal # Frontier
 
 - type: entity
   name: plain jelly-donut
@@ -480,4 +480,4 @@
         - ReagentId: Amatoxin
           Quantity: 10
   - type: Food # Frontier
-    quality: Toxin # Frontier, New Food Quality System
+    quality: Junk # Frontier, New Food Quality System
