--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Containers/box.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Containers/box.yml
@@ -50,9 +50,9 @@
     heldPrefix: box
   - type: StorageFill
     contents:
-    - id: FoodDonutPink
+    - id: FoodDonutPinkVendor # Frontier: FoodDonutPink<FoodDonutPinkVendor
       amount: 3
-    - id: FoodDonutPlain
+    - id: FoodDonutPlainVendor # Frontier: FoodDonutPlain<FoodDonutPlainVendor
       amount: 3
   - type: ItemCounter
     count:
