--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
@@ -772,7 +772,7 @@
     tags:
     - Trash
   - type: Food # Frontier
-    quality: Toxin # Frontier, New Food Quality System
+    quality: Nasty # Frontier, New Food Quality System
 
 - type: entity
   name: cocoa beans
