--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -1750,7 +1750,7 @@
       Taco: FlyAmanita
       Burger: FlyAmanita
   - type: Food # Frontier
-    quality: Toxin # Frontier, New Food Quality System
+    quality: Bland # Frontier, New Food Quality System
 
 - type: entity
   name: gatfruit
@@ -2468,6 +2468,7 @@
     tags:
     - ClothMade
     - CottonBoll
+    - MothFood # Frontier
 
 - type: entity
   name: pyrotton boll
@@ -2499,6 +2500,7 @@
     tags:
     - ClothMade
     - CottonBoll
+    - MothFood # Frontier
   - type: Extractable
     grindableSolutionName: food
 
