--- a/Resources/Prototypes/Entities/Objects/Fun/error.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/error.yml
@@ -8,6 +8,7 @@
     sprite: error.rsi
     state: error
   - type: Food
+    quality: Nasty # Frontier
   - type: SolutionContainerManager
     solutions:
       food:
