--- a/Resources/Prototypes/Entities/Objects/Misc/kudzu.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/kudzu.yml
@@ -243,11 +243,12 @@
         - Flesh
     - type: Food # delightfully devilish !
       delay: 0.5
+      quality: Nasty # Frontier
     - type: SolutionContainerManager
       solutions:
         food:
           reagents:
-          - ReagentId: Protein
+          - ReagentId: UncookedAnimalProteins # Frontier
             Quantity: 2
     - type: Respirator
       damage:
