--- a/Resources/Prototypes/_NF/Body/Organs/goblin_organs.yml
+++ b/Resources/Prototypes/_NF/Body/Organs/goblin_organs.yml
@@ -152,7 +152,7 @@
       - Paper
   - type: Metabolizer
     maxReagents: 3
-    metabolizerTypes: [ Animal ] # [ Goblin ]
+    metabolizerTypes: [ Animal ]
     removeEmpty: true
     groups:
     - id: Food
