--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/meat.yml
@@ -111,3 +111,12 @@
       - Meat
   - type: Food
     quality: Normal
+
+- type: entity
+  name: corpse meat
+  parent: FoodMeatRotten
+  id: FoodMeatRottenCorpse
+  description: How long's this been sitting around?
+  components:
+  - type: Food
+    quality: SuperJunk
