--- a/Resources/Prototypes/_NF/Entities/Objects/Misc/dragon_egg.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Misc/dragon_egg.yml
@@ -73,6 +73,7 @@
     sprite: _NF/Objects/Consumable/Food/dragon_egg.rsi
     state: broken
   - type: Food
+    quality: Nasty
   - type: Item
     sprite: Objects/Consumable/Food/egg.rsi
     size: Large
