--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/bread.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/bread.yml
@@ -143,6 +143,7 @@
     tags:
     - ClothMade
     - Bread
+    - MothFood # Frontier
   - type: SolutionContainerManager
     solutions:
       food:
@@ -173,6 +174,7 @@
     - ClothMade
     - Bread
     - Slice
+    - MothFood # Frontier
   - type: SolutionContainerManager
     solutions:
       food:
@@ -533,7 +535,7 @@
       - cobwebs
       - bread
   - type: Food # Frontier
-    quality: Toxin # Frontier, New Food Quality System
+    quality: Nasty # Frontier, New Food Quality System
   - type: Sprite
     layers:
     - state: spidermeat-slice
