--- a/Resources/Prototypes/Entities/Objects/Specific/rehydrateable.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/rehydrateable.yml
@@ -15,6 +15,7 @@
           Quantity: 10
   - type: Food
     solution: cube
+    quality: Junk # Frontier
   - type: FlavorProfile
     flavors:
     - chewy
@@ -236,6 +237,7 @@
           Quantity: 10
   - type: Food
     solution: cube
+    quality: Junk # Frontier
   - type: FlavorProfile
     flavors:
     - chewy
