--- a/Resources/Prototypes/_NF/Entities/Mobs/Corpses/medical_corpse.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/Corpses/medical_corpse.yml
@@ -76,11 +76,11 @@
   components:
   - type: StinkyTrait
   - type: Carriable # Carrying system from nyanotrasen.
-  - type: Butcherable
-    butcheringType: Spike
-    spawned:
-    - id: FoodMeatRotten
-      amount: 5
+  # - type: Butcherable
+  #   butcheringType: Spike
+  #   spawned:
+  #   - id: FoodMeatRotten
+  #     amount: 5
   - type: TriggerOnBeingGibbed
   - type: GibOnTrigger
     deleteItems: true
