Fix ruminant digestion prototype

--- a/Resources/Prototypes/_NF/Body/Prototypes/digestion.yml
+++ b/Resources/Prototypes/_NF/Body/Prototypes/digestion.yml
@@ -197,6 +197,7 @@
 # Keep cows, pigs, etc. fed longer
 - type: digestion
   id: Ruminant
+  effects:
   - whitelist:
       components:
       - Produce
