New poster and hull updates

--- a/Resources/Prototypes/_NF/Shipyard/caladrius.yml
+++ b/Resources/Prototypes/_NF/Shipyard/caladrius.yml
@@ -17,7 +17,7 @@
   category: Large
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/caladrius.yml
-  guidebookPage: Null
+  guidebookPage: ShipyardCaladrius
   class:
   - Medical
   - Chemistry
