--- a/Resources/Maps/_NF/Shuttles/caladrius.yml
+++ b/Resources/Maps/_NF/Shuttles/caladrius.yml
@@ -6753,6 +6753,13 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -1.5,-26.5
       parent: 1
+- proto: DefaultStationBeaconAtmospherics
+  entities:
+  - uid: 2219
+    components:
+    - type: Transform
+      pos: 10.5,-23.5
+      parent: 1
 - proto: DefaultStationBeaconBotany
   entities:
   - uid: 1973
