Add the syringe gun as research (#2169)
* Tech added

* Added recipes and made printable

* Tech added

* Added recipes and made printable

* Should solve the conflict

* Should solve the merge conflict

* Emagged protolathe

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -448,6 +448,10 @@
       - WeaponXrayCannon
       - SpeedLoaderRifleHeavyIncendiary # Frontier
       - SpeedLoaderRifleHeavyUranium # Frontier
+      # Begin DeltaV additions
+      - LauncherSyringe
+      - MiniSyringe
+      # End DeltaV additions
 
 - type: entity
   id: ProtolatheHyperConvection
@@ -1031,14 +1035,18 @@
       - BlankMediPen # Frontier
       - MedicalAppraisalTool # Frontier
     dynamicRecipes:
-      - VialBluespace # Frontier
       - ChemicalPayload
       - CryostasisBeaker
       - BluespaceBeaker
       - SyringeBluespace
       - Jug
       - SyringeCryostasis
+      - VialBluespace # Frontier
       - ClothingOuterHardsuitMedical # Frontier
+      # Begin DeltaV additions
+      - LauncherSyringe
+      - MiniSyringe
+      # End DeltaV additions
   - type: Machine
     board: MedicalTechFabCircuitboard
   - type: StealTarget
