--- a/Resources/_NF/migration.yml
+++ b/Resources/_NF/migration.yml
@@ -93,3 +93,9 @@ SpawnPointDetectiveNF: NFSpawnPointDetective
 
 # 2024-11-09
 WarpPointShip: WarpPoint
+
+# 2024-11-11 Xeno
+XenoAISpawnerEasy: SpawnMobXenoT1
+XenoAISpawnerMedium: SpawnMobXenoT2
+XenoAISpawnerHard: SpawnMobXenoT3
+XenoAISpawnerQueen: SpawnMobXenoQueenDungeon
