--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -139,7 +139,7 @@
       - CableStack
       - CableMVStack
       - CableHVStack
-      - HandheldGPSBasic
+#      - HandheldGPSBasic # Frontier
       - TRayScanner
       - AirTank
       - GasAnalyzer
@@ -209,12 +209,6 @@
       - Flare
       - BoxDispenserFlare # Frontier
       - Durathread # Frontier
-#      - ClothingOuterSuitEmergency # Frontier
-      - ClothingHeadHelmetEVA # Frontier
-      - ClothingHeadHelmetEVALarge # Frontier
-#      - ClothingOuterHardsuitEVA # Frontier
-      - ClothingOuterEVASuitContractor # Frontier
-      - ClothingOuterEVASuitPilot # Frontier
   - type: EmagLatheRecipes
     emagStaticRecipes:
       - BoxLethalshot
@@ -389,7 +383,6 @@
       - UtilityBeltChiefEngineer
       - JetpackVoid # Frontier
       - ClothingShoesBootsMagAdv # Frontier
-      - ClothingOuterHardsuitBasic # Frontier
       - ClothingOuterHardsuitAtmos # Frontier
       - ClothingOuterHardsuitEngineering # Frontier
       - ClothingOuterHardsuitSpatio # Frontier
@@ -406,8 +399,6 @@
       - ClothingOuterHardsuitScaf # Frontier
       - ClothingOuterHardsuitPilot # Frontier
       - ClothingOuterHardsuitMaximPrototype # Frontier
-#      - ClothingHeadHelmetAncient # Frontier
-#      - ClothingOuterHardsuitAncientEVA # Frontier
       - ConstructionBagOfHolding # Frontier
       - ServiceSelectiveDropper # Frontier
       - PlantAnalyzer # Frontier
@@ -860,10 +851,6 @@
       - WeaponLaserCarbinePractice
       - Zipties
       - ThrusterSecurityMachineCircuitboard # Frontier
-#      - ClothingOuterSuitEmergency # Frontier
-      - ClothingOuterEVASuitNfsd # Frontier
-      - ClothingHeadHelmetEVA # Frontier
-      - ClothingHeadHelmetEVALarge # Frontier
       - ClothingOuterHardsuitEVAPrisoner # Frontier
     dynamicRecipes:
       - BoxBeanbag
@@ -1045,9 +1032,6 @@
       - Hemostat
       - ClothingEyesGlassesChemical
       - WhiteCane
-      - ClothingOuterEVASuitMedic # Frontier
-#      - ClothingOuterSuitEmergency # Frontier
-      - ClothingOuterHardsuitVoidParamed # Frontier
       - BaseChemistryEmptyVial # Frontier
       - PowerCellSmall # Frontier
       - BlankMediPen # Frontier
