--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
@@ -1,6 +1,6 @@
 - type: entity
   abstract: true
-  parent: [ Clothing, AllowSuitStorageClothing, RecyclableItemClothDurable ] # Frontier: added AllowSuitStorageClothing and RecyclableItemClothDurable
+  parent: [ Clothing, AllowSuitStorageClothing ] # Frontier: added AllowSuitStorageClothing
   id: ClothingOuterBase
   components:
   - type: Clothing
@@ -45,7 +45,7 @@
 
 - type: entity
   abstract: true
-  parent: [RecyclableItemClothBasic, ClothingOuterStorageBase, BaseFoldable] # Frontier: added RecyclableItemClothBasic
+  parent: [ClothingOuterStorageBase, BaseFoldable]
   id: ClothingOuterStorageFoldableBase
   components:
   - type: Appearance
@@ -135,12 +135,6 @@
     tags:
     - Hardsuit
     - WhitelistChameleon
-    - HidesHarpyWings #Frontier, needed for Harpies
-  - type: PhysicalComposition # Frontier
-    materialComposition: # Frontier
-      Durathread: 300 # Frontier
-      Cloth: 100 # Frontier
-      Steel: 100 # Frontier
   - type: ProtectedFromStepTriggers
     slots: WITHOUT_POCKET
   - type: DamageOnInteractProtection
@@ -148,6 +142,7 @@
       flatReductions:
         Heat: 10 # the average lightbulb only does around four damage!
     slots: OUTERCLOTHING
+  - type: HidesHarpyWings #Frontier, needed for Harpies
 
 - type: entity
   abstract: true
@@ -174,10 +169,6 @@
       flatReductions:
         Heat: 10 # the average lightbulb only does around four damage!
     slots: OUTERCLOTHING
-#  - type: PhysicalComposition # Frontier
-#    materialComposition: # Frontier
-#      Durathread: 100 # Frontier
-#      Cloth: 50 # Frontier
 
 - type: entity
   parent: ClothingOuterBase
