--- a/Resources/Prototypes/DeltaV/tags.yml
+++ b/Resources/Prototypes/DeltaV/tags.yml
@@ -21,8 +21,8 @@
 - type: Tag
   id: HandLabeler
 
-#- type: Tag # Frontier - This was replaced with HidesHarpyWings comp
-#  id: HidesHarpyWings # Frontier - This was replaced with HidesHarpyWings comp
+#- type: Tag # Frontier - This was replaced with HarpyHideWings comp
+#  id: HidesHarpyWings # Frontier - This was replaced with HarpyHideWings comp
 
 - type: Tag
   id: MagazinePistolSpecial # For the .38 special ammo and pistol
