--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
@@ -142,7 +142,7 @@
       flatReductions:
         Heat: 10 # the average lightbulb only does around four damage!
     slots: OUTERCLOTHING
-  - type: HidesHarpyWings #Frontier, needed for Harpies
+  - type: HarpyHideWings # Frontier, needed for Harpies
 
 - type: entity
   abstract: true
