--- a/Resources/Prototypes/Entities/Clothing/Hands/colored.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/colored.yml
@@ -340,8 +340,6 @@
   - type: Fiber
     fiberMaterial: fibers-insulative
     fiberColor: fibers-yellow
-  - type: StaticPrice
-    price: 45.5
 
 # Budget Insulated Gloves
 - type: entity
@@ -369,6 +367,8 @@
   - type: Fiber
     fiberMaterial: fibers-insulative-frayed
     fiberColor: fibers-yellow
+  - type: StaticPrice # Frontier
+    price: 35 # Frontier
 
 # Conductive Insulated Gloves
 - type: entity
