--- a/Resources/Prototypes/Entities/Objects/Devices/encryption_keys.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/encryption_keys.yml
@@ -8,11 +8,10 @@
   - type: EncryptionKey
   - type: Item
     sprite: Objects/Devices/encryption_keys.rsi
-    size: Tiny # Frontier - 5 to 2 size
   - type: Sprite
     sprite: Objects/Devices/encryption_keys.rsi
-  - type: StaticPrice
-    price: 2
+  - type: StaticPrice # Frontier
+    price: 2 # Frontier
 
 - type: entity
   parent: [EncryptionKey, RecyclableItemDeviceTiny] # Frontier: added RecyclableItemDeviceTiny
