--- a/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
@@ -25,7 +25,7 @@
   - type: StealTarget
     stealGroup: IDCard
   - type: StaticPrice # Frontier
-    price: 5 # The card need to cost less then the PDA that comes with a card and a pen in it.
+    price: 5 # Frontier The card need to cost less then the PDA that comes with a card and a pen in it.
   - type: CargoSellBlacklist # Frontier
 
 #IDs with layers
