--- a/Resources/Prototypes/Entities/Objects/Tools/flashlights.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/flashlights.yml
@@ -65,7 +65,7 @@
     netsync: false
   - type: Appearance
   - type: StaticPrice
-    price: 15.5
+    price: 15.5 # Frontier: 40<15.5
   - type: StealTarget
     stealGroup: LAMP
   - type: Clothing
