--- a/Resources/Prototypes/Entities/Clothing/Shoes/magboots.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/magboots.yml
@@ -31,7 +31,7 @@
           True: {state: icon-on}
           False: {state: icon}
   - type: StaticPrice
-    price: 200
+    price: 100 # Frontier 200<100
   - type: Tag
     tags:
     - WhitelistChameleon
