--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/softsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/softsuits.yml
@@ -14,6 +14,9 @@
     - SuitEVA
     - MonkeyWearable
     - WhitelistChameleon
+  - type: StaticPrice # Frontier
+    price: 20 # Frontier
+    vendPrice: 1000 # Frontier
 
 #Syndicate EVA
 - type: entity
