--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -27,6 +27,9 @@
   - type: HeldSpeedModifier
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadHelmetHardsuitBasic
+  - type: StaticPrice # Frontier
+    price: 20 # Frontier
+    vendPrice: 2000 # Frontier
 
 #Atmospherics Hardsuit
 - type: entity
