--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
@@ -143,6 +143,9 @@
         Heat: 10 # the average lightbulb only does around four damage!
     slots: OUTERCLOTHING
   - type: HarpyHideWings # Frontier, needed for Harpies
+  - type: StaticPrice # Frontier
+    price: 20 # Frontier
+    vendPrice: 1000 # Frontier
 
 - type: entity
   abstract: true
