Cleanup comps from dead AI

--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
@@ -178,6 +178,7 @@
       - DinosaursNF
   - type: NFSalvageMobRestrictions
     despawnIfOffLinkedGrid: false
+    cleanCompsOnMobDeath: false
 
 - type: entity
   name: Mistake
