Изменил цену на приемлемую

--- a/Resources/Prototypes/Corvax/Shipyard/Expedition/Atlas.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Expedition/Atlas.yml
@@ -6,7 +6,7 @@
   id: Atlas
   name: NC Атлас
   description: Бывший в эксплуатации мобильный научный комплекс, который был переделан под длительные экспедиции и автономность, рекомендуется для команды из 6-12 человек.
-  price: 175000
+  price: 149000 #124000 + 25%
   category: Large
   group: Expedition
   shuttlePath: /Maps/Corvax/Shuttles/Expedition/Atlas.yml
